--- a/index.css
+++ b/index.css
@@ -3,18 +3,20 @@
     margin:0 auto;
     padding:0;
     box-sizing: border-box;
+  
    }
    
    body{
        
         background-color:aliceblue;
         font-family: Arial, Helvetica, sans-serif;
-
+        height: 100vh;
+        background: #ffe6ed;
+        overflow: auto;
 
         }
         header{
-            background-color: #424874;
-            
+            background-color: #496342;
             position: sticky;
             top: 0;
             font-family: "Shadows Into Light", cursive;
@@ -30,15 +32,12 @@
         }
 
         nav{
-        
-        
-            align-items: center;
-        
-            
+            align-items: center; 
         }
+
         .big-header{
             font-size: 2.5em;
-            color:white;
+            color: #f9e076;
             
         }
         
@@ -49,9 +48,6 @@
             margin-left: 0;
         }
 
-
-
-    
         #nav-links{
             list-style: none;
             display:flex;
@@ -59,16 +55,17 @@
             font-size: 1.5em;
             font-weight: 700;
             /* margin-left:6em; */
-        color:white;
-            
+         color:white;
         }
+
         #nav-links > li{
             padding:5px;
             
         
         }
+
         #nav-links a{
-            color:#e8e4fa;
+            color:#f9e076;
             text-decoration: none;
             letter-spacing: 2px;
         }
@@ -76,50 +73,14 @@
         #nav-links a:hover{
             color:pink;
         }
-               /* begining of main section of home page*/
 
 
-                main{
-                    
-                    background-color:lavender;
-                }
-                main > h1{
-                    font-size: 3em;
-                    padding:40px;
-                }
-                .hero{
-                    background-color: #DCD6F7;
-                    width:100%;
-                    height:90vh;
-                
-                    background-size: cover;
-                    display: flex;
-                    flex-direction: column;
-                    
-                }
-                        /* #profile-pic{
-                            border-radius: 100%;
-                            padding: 20px;
-                        } */
-                        .hero > h1,h3,h4{
-                            padding:10px;
-                            margin-top:5px;
-                            margin-bottom: 5px;
-
-                        
-                        }
-                        #profileText{
-                        
-                            text-align: center;
-                            
-                            font-size: 1.5em;
-                        }
-                
-
-                    /* NEXT PAGE */
         footer{
-        height: 50px;
-        background-color:#424874;
-        
-
-        }
+            width: 100%;
+            text-align: center;
+            height: 25px;
+            background-color:  #496342;
+            color: whitesmoke;
+            margin-bottom:0;
+            padding-bottom:5px;
+      }
